Bug 234852 - Default view setting changes when viewing remote folder
Summary: Default view setting changes when viewing remote folder
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-20 03:38 UTC by Chris Dekter
Modified: 2010-07-02 10:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dekter 2010-04-20 03:38:49 UTC
Version:           1.4 (using KDE 4.4.2)
OS:                Linux
Installed from:    Ubuntu Packages

When configured to 'Remember view properties for each folder', Dolphin uses a default view for folders that have not been visited previously and do not have a view configured in a .directory file contained within the folder.

A glitch is occurring when viewing a remote folder (e.g. via SFTP). If you change that remote folder's view, the new view mode is applied as the default view for all local folders that do not have a .directory file. To replicate:

1. Ensure Dolphin is configured to remember view properties for each folder.
2. Open two tabs in home dir. This test assumes that you have the defaults in placed which means the two tabs open the home dir in Icons view mode.
3. Create new empty folder in home dir to use for testing (or locate one that does not have a .directory entry)
4. In the second tab, open sftp connection to remote host and open an arbitrary folder.
5. In the second tab, change the view mode to Details
6. Now in the first tab, open the newly created folder. 

Expected: the folder opens in Icons mode 
Actual: the folder opens in Details mode

My guess is because Dolphin won't remember view properties for remote folders, it applies any change in view mode in a remote folder as the new default view mode.
Comment 1 Peter Penz 2010-05-19 21:19:09 UTC
SVN commit 1128615 by ppenz:

Don't change the default view properties, if the view mode is changed on a remote folder.

BUG: 234852

 M  +4 -15     viewproperties.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1128615
Comment 2 Peter Penz 2010-05-19 21:29:55 UTC
SVN commit 1128622 by ppenz:

Backport of SVN commit 1128615: Don't change the default view properties, if the view mode is changed on a remote folder.

CCBUG: 234852

 M  +3 -14     viewproperties.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1128622
Comment 3 Peter Penz 2010-05-19 21:34:16 UTC
Thanks Chris for the detailed bug report, it helped me a lot to reproduce the issue (I faced this issue myself too sometimes, but never found out how to reproduce it).
Comment 4 Chris Dekter 2010-06-04 04:19:39 UTC
Tested the patch in KDE SC 4.4.4 (Dolphin 1.4) on Kubuntu 10.04 - fix works for me :)
Comment 5 abcdefz 2010-07-02 10:29:52 UTC
Hey there!  I'm having trouble with view modes too, but I've narrowed it down, view modes seem to act funny when you're working with a VFAT filesystem.  It can't remember a folders view mode even within the SAME SESSION.  No matter how many times you click "View">>"View Mode">>"Icons" on a VFAT fs, if you leave that directory and then come back, it keeps going back to detail mode.  _No_mattter_HOW_you_set_it_up_in_ 'configure this' or 'default that'...That help??
Comment 6 Peter Penz 2010-07-02 10:49:56 UTC
@abcdefz: This might be an issue in the vfat io-slave then. If Dolphin has write access for local files, it tries to remember the view properties within the folder. It seems in the case of vfat this does not work, but no error seems to get returned... Would it be possible that you submit a custom bug report for this? Thanks!
Comment 7 abcdefz 2010-07-02 10:58:29 UTC
Bug 243414

Be in touch,
jdg

Jeffrey D. Glock
jdg@jglock.com
+1.410.925.6705 

-----Original Message-----
From: Peter Penz <peter.penz@gmx.at>
Reply-to: bug-control@bugs.kde.org
To: jdg@jglock.com
Subject: [Bug 234852] Default view setting changes when viewing remote
folder
Date: Fri, 2 Jul 2010 10:49:57 +0200 (CEST)


https://bugs.kde.org/show_bug.cgi?id=234852





--- Comment #6 from Peter Penz <peter penz gmx at>  2010-07-02 10:49:56 ---
@abcdefz: This might be an issue in the vfat io-slave then. If Dolphin has
write access for local files, it tries to remember the view properties within
the folder. It seems in the case of vfat this does not work, but no error seems
to get returned... Would it be possible that you submit a custom bug report for
this? Thanks!