Don't change the default view properties, if the view mode is changed on a remote folder.

BUG: 234852

svn path=/trunk/KDE/kdebase/apps/; revision=1128615